--- a/src/app/features/components/home/home.component.css
+++ b/src/app/features/components/home/home.component.css
@@ -31,6 +31,6 @@
 
 @media (max-width: 768px) {
     .home-layout {
-        padding: 1rem 1rem 1.5rem;
+        padding: 0;
     }
 }
